--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="text-align: center;"><br />
+<div style="text-align: center;padding-left: 10%; padding-right:10%"><br />
 <h1>Stuart Farmer</h1>
 <h3>Entrepreneur, Technologist, Etc. <br /> <br /> <img src="https://github.com/StuartFarmer/stuartfarmer.github.io/raw/main/stu_16.png" alt="" width="425" height="425" />&nbsp;</h3>
 <p>Me at 16 years old (2010)</p>
@@ -26,3 +26,20 @@
   <li>Lots of music and art.</li>
   
 </ul>
+
+<h5>How we can work together</h5>
+<p>
+I am always open to new opportunities, especially in the financial and AI technology sectors. I am potentially available for consulting on a high level (I don't program for hire). Feel free to connect with me via one of my contacts below.  
+</p>
+
+
+<h5>Contacts</h5>
+<ul>
+  <li>Email</li>
+  <li>GitHub</li>
+  <li>LinkedIn</li>
+  <li>Telegram</li>
+</ul>
+<br />
+<br />
+<br />
