--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <div style="text-align: center;padding-left: 10%; padding-right:10%"><br />
 <h1>Stuart Farmer</h1>
 <h3>Entrepreneur, Technologist, Etc. <br /> <br /> <img src="https://github.com/StuartFarmer/stuartfarmer.github.io/raw/main/stu_16.png" alt="" width="425" height="425" />&nbsp;</h3>
