--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ I am always open to new opportunities, especially in the financial and AI techno
 
 <h5>Contacts</h5>
 <ul>
-  <li>Email</li>
-  <li>GitHub</li>
-  <li>LinkedIn</li>
-  <li>Telegram</li>
+  <li><a href='mailto:me@stu.farm'>Email</a></li>
+  <li><a href='https://github.com/StuartFarmer'>GitHub</a></li>
+  <li><a href='https://www.linkedin.com/in/stuartfarmer/'>LinkedIn</a></li>
+  <li><a href='https://t.me/stuartf'>Telegram</a></li>
 </ul>
 <br />
 <br />
