--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <li>Plenty of hackathons.</li>
 <li>Learned machine learning, AI, and linear algebra to predict the stock market. Worked with custom loss functions, Keras, Tensorflow, experiment tracking, you name it. Ran 1000+ experiments, hypotheses, etc. Found alpha, in both the AI and non-AI domains. I continue to develop models and network with other quants to hopefully build out a quant fund one day.</li>
   <li>Lots of music and art.</li>
+<li>Consulting / Advisory for DAOs and other projects.</li>
   
 </ul>
 
